# resolv-conf

./: .travis.yml  Cargo.toml  README.md  README.rst  index.html  search-index.js  vagga.yaml
.github/workflows/: ci.yml
examples/: parse.rs
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/std/error/: trait.Error.js
resolv_conf/: enum.Network.html  enum.ParseError.html  index.html  sidebar-items.js  struct.Config.html
resolv_conf/grammar/: enum.ParseError.html  sidebar-items.js
src/: config.rs  grammar.rs  ip.rs  lib.rs
src/resolv_conf/: grammar.rs.html  lib.rs.html
tests/: lib.rs  resolv.conf-macos  resolv.conf-openbsd
