[package]
name = "resolv-conf"
version = "0.7.3"
edition = "2021"
rust-version = "1.61"
description = """The resolv.conf file parser"""
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["dns", "unix", "conf", "resolv"]
categories = ["parser-implementations"]
homepage = "https://github.com/hickory-dns/resolv-conf"
documentation = "https://docs.rs/resolv-conf/"
repository = "https://github.com/hickory-dns/resolv-conf"

[dependencies]
libc = { version = "0.2", optional = true }

[features]
system = ["libc"]