[package]
name = "resolv-conf"
version = "0.7.4"
edition = "2021"
rust-version = "1.61"
description = """The resolv.conf file parser"""
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["dns", "unix", "conf", "resolv"]
categories = ["parser-implementations"]
homepage = "https://github.com/hickory-dns/resolv-conf"
documentation = "https://docs.rs/resolv-conf/"
repository = "https://github.com/hickory-dns/resolv-conf"

[features]
# dummy feature for backwards compatibility with 0.7.1;
# can be dropped with the next breaking version
system = []
